[gd_scene load_steps=15 format=2]

[ext_resource path="res://0 - General/Themes/Fonts/Lato-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://0 - General/Themes/Billete.tres" type="StyleBox" id=2]
[ext_resource path="res://Sprites/timer.png" type="Texture" id=3]
[ext_resource path="res://Sprites/dinerito.png" type="Texture" id=4]
[ext_resource path="res://Sprites/UI/failed.png" type="Texture" id=5]
[ext_resource path="res://0 - General/Themes/Fonts/Titulos.tres" type="DynamicFont" id=6]
[ext_resource path="res://Sprites/UI/reload.png" type="Texture" id=7]
[ext_resource path="res://Scripts/Puntuacion.gd" type="Script" id=8]
[ext_resource path="res://Sprites/UI/save-disabled.png" type="Texture" id=9]
[ext_resource path="res://0 - General/Themes/Normal.tres" type="Theme" id=10]
[ext_resource path="res://Sprites/UI/save.png" type="Texture" id=11]
[ext_resource path="res://Sprites/UI/rating.png" type="Texture" id=12]

[sub_resource type="Theme" id=2]
Label/colors/font_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 1 )

[node name="Control" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 8 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.588235 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -279.0
margin_top = -313.0
margin_right = 279.0
margin_bottom = 313.0
theme = ExtResource( 10 )
custom_styles/panel = ExtResource( 2 )

[node name="Msg" type="Label" parent="Panel"]
anchor_right = 1.0
margin_top = 200.0
margin_bottom = 51.0
custom_colors/font_color = Color( 0.556863, 0.52549, 0.839216, 1 )
custom_colors/font_outline_modulate = Color( 0.733333, 0.776471, 0.901961, 1 )
custom_fonts/font = ExtResource( 6 )
text = "Fin del juego"
align = 1
uppercase = true

[node name="InfoContainer" type="HBoxContainer" parent="Panel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_bottom = 39.0
size_flags_horizontal = 0
theme = SubResource( 2 )
custom_constants/separation = 75
alignment = 1

[node name="BookContainer" type="HBoxContainer" parent="Panel/InfoContainer"]
margin_left = 132.0
margin_right = 229.0
margin_bottom = 78.0
custom_constants/separation = 20
alignment = 1

[node name="Book" type="TextureRect" parent="Panel/InfoContainer/BookContainer"]
margin_right = 40.0
margin_bottom = 78.0
texture = ExtResource( 4 )
stretch_mode = 6

[node name="ScoreLabel" type="Label" parent="Panel/InfoContainer/BookContainer"]
margin_left = 60.0
margin_right = 97.0
margin_bottom = 78.0
rect_pivot_offset = Vector2( -621, -106 )
custom_fonts/font = SubResource( 3 )
text = "0"

[node name="TimerContainer" type="HBoxContainer" parent="Panel/InfoContainer"]
margin_left = 304.0
margin_right = 425.0
margin_bottom = 78.0
custom_constants/separation = 20
alignment = 1

[node name="Timer" type="TextureRect" parent="Panel/InfoContainer/TimerContainer"]
margin_right = 64.0
margin_bottom = 78.0
texture = ExtResource( 3 )

[node name="TimeLabel" type="Label" parent="Panel/InfoContainer/TimerContainer"]
margin_left = 84.0
margin_right = 121.0
margin_bottom = 78.0
rect_pivot_offset = Vector2( -621, -106 )
custom_fonts/font = SubResource( 3 )
text = "0"

[node name="BtnContainer" type="HBoxContainer" parent="Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -150.0
margin_bottom = -80.0
custom_constants/separation = 50
alignment = 1

[node name="SaveBtn" type="TextureButton" parent="Panel/BtnContainer"]
visible = false
margin_left = 133.0
margin_right = 197.0
margin_bottom = 70.0
disabled = true
texture_normal = ExtResource( 11 )
texture_disabled = ExtResource( 9 )

[node name="RetryBtn" type="TextureButton" parent="Panel/BtnContainer"]
margin_left = 138.0
margin_right = 202.0
margin_bottom = 70.0
texture_normal = ExtResource( 7 )

[node name="ScoresBtn" type="TextureButton" parent="Panel/BtnContainer"]
margin_left = 252.0
margin_right = 306.0
margin_bottom = 70.0
texture_normal = ExtResource( 12 )

[node name="CloseBtn" type="TextureButton" parent="Panel/BtnContainer"]
margin_left = 356.0
margin_right = 420.0
margin_bottom = 70.0
texture_normal = ExtResource( 5 )

[node name="Label2" type="Label" parent="Panel"]
margin_left = 200.0
margin_top = 88.0
margin_right = 359.0
margin_bottom = 135.0
text = "SCORE"
align = 1
valign = 1

[connection signal="pressed" from="Panel/BtnContainer/RetryBtn" to="." method="_on_RetryBtn_pressed"]
[connection signal="pressed" from="Panel/BtnContainer/ScoresBtn" to="." method="_on_ScoresBtn_pressed"]
[connection signal="pressed" from="Panel/BtnContainer/CloseBtn" to="." method="_on_CloseBtn_pressed"]
